@@ -1,3 +1,10 @@
+2010-09-30  Andreas Simbuerger  <simbuerg@fim.uni-passau.de>
+
+	* graphite-clast-to-gimple.c (init_cloog_input_file): New.
+	(build_cloog_prog): Dump CLooG input file when
+	flag_graphite_dump_cloog is set.  This is disabled on trunk.
+	* graphite-cloog-compat.h (cloog_program_dump_cloog): New.
+
 2010-09-30  Sebastian Pop  <sebastian.pop@amd.com>
 
 	* graphite-clast-to-gimple.c (graphite_verify): Remove call to
